[gd_scene load_steps=5 format=3 uid="uid://c1m4ga3le7uvu"]

[ext_resource type="Texture2D" uid="uid://c344xmtunji6y" path="res://graphics/enemies/drone.png" id="1_l0itw"]
[ext_resource type="Script" path="res://ScanRadius.gd" id="2_lyuo2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1wtgr"]
radius = 88.5663

[sub_resource type="CircleShape2D" id="CircleShape2D_7ow7y"]
radius = 647.612

[node name="Drone" type="CharacterBody2D"]
disable_mode = 1
collision_layer = 2
collision_mask = 31
script = ExtResource("2_lyuo2")

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
rotation = 1.57624
scale = Vector2(1, 1)
shape = SubResource("CircleShape2D_1wtgr")
one_way_collision_margin = 0.0

[node name="Sprite2D2" type="Sprite2D" parent="."]
rotation = 1.5759
texture = ExtResource("1_l0itw")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 0.900145
shape = SubResource("CircleShape2D_7ow7y")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="MissTimer" type="Timer" parent="."]
wait_time = 9.924

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="MissTimer" to="." method="_on_miss_timer_timeout"]
